# ChangeLog for app-cdr/gtkcdlabel
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/gtkcdlabel/ChangeLog,v 1.39 2014/08/10 02:14:16 patrick Exp $

  10 Aug 2014; Patrick Lauer <patrick@gentoo.org> gtkcdlabel-1.12.ebuild,
  gtkcdlabel-1.14.ebuild:
  Fix description for more repoman happy

  30 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gtkcdlabel-1.12.ebuild, gtkcdlabel-1.14.ebuild:
  Use Python 2 (bug #308325).

*gtkcdlabel-1.14 (30 Apr 2009)

  30 Apr 2009; Samuli Suominen <ssuominen@gentoo.org>
  -gtkcdlabel-1.0_pre8.ebuild, +gtkcdlabel-1.14.ebuild:
  Version bump.

  27 Jul 2008; Friedrich Oslage <bluebird@gentoo.org>
  gtkcdlabel-1.12.ebuild:
  Stable on sparc, bug #227237

  25 Jul 2008; Steve Dibb <beandog@gentoo.org> gtkcdlabel-1.12.ebuild:
  amd64 stable, bug 227237

  21 Jul 2008; nixnut <nixnut@gentoo.org> gtkcdlabel-1.12.ebuild:
  Stable on ppc wrt bug 227237

  18 Jul 2008; Christian Faulhammer <opfer@gentoo.org>
  gtkcdlabel-1.12.ebuild:
  stable x86, bug 227237

*gtkcdlabel-1.12 (14 May 2008)

  14 May 2008; Samuli Suominen <ssuominen@gentoo.org> +gtkcdlabel-1.12.ebuild:
  Version bump wrt #221993, thanks to Fabio Rossi.

  12 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  -gtkcdlabel-1.0_pre6.ebuild, -gtkcdlabel-1.0_pre7-r1.ebuild,
  gtkcdlabel-1.0_pre8.ebuild:
  clean up; quote variable; use emake instead of plain make

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  19 Jan 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  gtkcdlabel-1.0_pre6.ebuild, gtkcdlabel-1.0_pre7-r1.ebuild,
  gtkcdlabel-1.0_pre8.ebuild:
  QA: remove invalid RESTRICT="nomirror"

  07 Aug 2006; Thomas Cort <tcort@gentoo.org> gtkcdlabel-1.0_pre8.ebuild:
  Stable on amd64 wrt Bug #142039.

  06 Aug 2006; Jason Wever <weeve@gentoo.org> gtkcdlabel-1.0_pre8.ebuild:
  Stable on SPARC wrt bug #142039.
