@@ -1,5 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX cdcover-0.7.4-Makefile.patch 480 SHA256 c730005c89f96bfb7efcd33a14590f53a18aa59448ed531913d95339c2310017 SHA512 eac8ee9fdd649c2f42a20ce8a695c0849d82a8cbfefb85646503d76f2d3f64f7cb17d63fc5924f0a83644d6b9aefa4e5d9d7c3d2c7e69e5572bb5d17ba05ebc3 WHIRLPOOL 978e632420d173c6e56a8dfec7417d020d9b3960798f6aabf1dd7241185540251d6f94d2c9c05349ebccdfbe6f7ccdcc89c12eac20170f3080d6657c03f408c1
 DIST cdcover-0.7.4.tar.gz 908267 SHA256 f93d8cd2b85f21872e18f61f22522ff56ab70d627ae45cf970d689166327a6c0 SHA512 5da176559595608ac6565d23a390364b0fff332084206e819f91d22baee86a752677424fdf90e6a6ecf85fa30eab00edc89fb419f3ae82e0fcce0e714dbb1985 WHIRLPOOL 301937cc10a0f961d8dfe83edd0c7a8febdbf8f56757501b9cdeec36ca24776287820581e08f5a6d0d0e50f1209984b688d46872279a009e26c4527e283c2628
+EBUILD cdcover-0.7.4-r1.ebuild 1059 SHA256 b9a079db0c84236716e06278f291b7cc7eb10afa67d8e7e0194698e802c2dc8d SHA512 bbe7e7bab8e52d004b63aa4fe3e302cc23e0c4284904312f0a89169a0c5270ea31e9e6a24c9e220c82d0a9b9ea6f3e10d4f9919c63db4990ffb2cc4dcb65ce9a WHIRLPOOL 920d01685f8373798c432c38a8d84bf0f881a68cc1a5aef4acca8cf3c24d96e2672566555919edcb186571820640dff892b7e7f413635ff7e4ae1c551da40fa4
 EBUILD cdcover-0.7.4.ebuild 1089 SHA256 ea41186f76fa4a21147a05ccb93acb194c24e09d630f00c7858882ec9807ff4e SHA512 2c0762d7fa5da601d278fcd6ac51fb9d649a2afae1388ff8d120a668f8308a56b0c326c0f42fd9ee34a0a54fb33d4db48eb883aaa7a2fc6f7d28f4b3e651e324 WHIRLPOOL f9047d792af83d6b4c96903c74ff0e2ee1efe50738dc5938ab157ae34c32b82bf088c993e1bf48f72b2140add5c0588d129b78e4dd12c5a976fbbef541337a6c
-MISC ChangeLog 743 SHA256 ad830294748c6e206725a4a2121c7119af01179e1cc2f064d20b8e027fb00ed0 SHA512 76d529623842eb9a58ed2d610e68bdb7e067b9478b13960c5270027c8a393b1376ad3d2b81c2a0e76a8a4e811330fa78149d91f249157739d344fb0fbd533701 WHIRLPOOL cab799999799d574e7c0d0fce6060f3fe944d8ed5a38082906dd51e6bd8c9e4747dc5752174817d8a7787e2e979ef4ac89f0a76915f150628be3890fba0becf8
+MISC ChangeLog 880 SHA256 b64b5bc887ffdfb5b9fb2e5721bfd6d5354f45c0c435239cad1843a143d5ac0f SHA512 779a2e730e55c189f7cad353910c75424fc296d7f33ca682e2aab9317ad396186f46ab437d327cbc2b52279e9fde16891e59a438ad4834222f9b1cb7cb15ce2f WHIRLPOOL 1c3c83d63a6e10a6a1005e9c15f0c40565828c50c4cdbface5ca50a185569904cd2dd85df5575aa05f7275be09f79d20e55491b90f3b5d4e72c0fbf41f229958
 MISC metadata.xml 166 SHA256 ce62d1e5b04e01d03a732ee6d33b3d500810de8e55af4a527c970e5b475735d8 SHA512 1534f47fd560004cf8965363536d60529b5f28a58e26bf3459bc062b76ad89b0310bb4d1e339bf271d6d150026db5a4068ac11f9e2a39b075bb8c26e925e4daa WHIRLPOOL 6373ff408cef4ca611267c74d1217a4addf1c03cf069f6855a19204eebed7a2f17561ea98ad62adab2e540dbdb42d030be15b7ddbd864e94a2bc1112aa68d571
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJUndY3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOofUP/Axpns4IGFUUjiJP6bZgSZMo
+MDi/sl3FVmaBumuqAJUvYZcFYQt5qQX2vSw1cpbztikks351OMaoySIO1yr6iOQr
+DAa/oA7frLDGBfUPr1w3W4Ae3TtaS3PJZmFzU7koFYEruIFDr6QAwCSvNOZfJlnl
+cBvKl8XyZn8JdhaiuvW0mUcyZTrJQ/IjTH7cgmJ+32priFwgMEKRJlLfZ40PUV+3
+NhOtrzcN5N5BRKWD0Rlf1p5HhG2rVcQ5TowlXw2LXKOuuhNwxsj4+Ag0snAO67PJ
+iqZIvSRhYEQ3l/VxkSZJrGEYObDUCkq/hDypctOXi5VdIAnSb1VYbYj0vnsmd3Fw
+Xe5SHPS+QehFBOitpJmk6AKnDZvdXKbXC+J/9fYsWD6iaQwTbOXDpJsNFOqvqmBn
+9iAZFocY0Nf4kXsdy/5arLuXqFJiPwqtpSVEqeoXNXBlwT+QhkJiHM4cDJLh2NxJ
+JGOCC1JHpYqnUCgC+38b4UJjEZb++5zblerRxZ886ya/W+Cti+zpLkqi56pUfDGh
+hFRJ4E3UVd5ALsM6lsIlyUInkZc3uQb0GXAS/MVpI1yAd1QtczuFbSDTA5ceyyps
+ydc3kZ5cRF/tBT3XQjQcgEQAo5fJ74ufRnWK6leQ3o6HLXYJbiFyB0NcdfNNhe9c
+ytoXXtz60F+Eao4Cpjg3
+=LDab
+-----END PGP SIGNATURE-----
