@@ -1,6 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST gtkcdlabel-1.12.tar.bz2 30054 SHA256 a2db925b4b7afc748465257872ffa5e5a7ba0a1545244431247ce506d0999a6b SHA512 7723dc986b89d7f0a296305b5933718f694939a000c9a3bd5f32acb6fc7e541e6a005f8826710b87f27c08aa616be06d83ea1dc1dc51b05fe8b6a776fc780b8f WHIRLPOOL 025dbf468a65dd2f673d74d38524e7a589da7d9dc60772b0ff165eeb3a7b6a8e940b1d9a5cc790b83e44209b687c7b5817ffcc18f50fb1047f7f00138abc63a0
 DIST gtkcdlabel-1.14.tar.bz2 36397 SHA256 df3307744822cde89632da8a83bae7e8e7c3754ed4738cf559c4be14cc66c303 SHA512 35dde20c73a38cb1dc61b42a8f54cc78d7b3db90b88cbf45f48ccf5eabe95333c5f61f4e8cd77ac1fe4f9faeb55acf944df9fb8bf363343da5bad8cc81115c6e WHIRLPOOL 152b3c02e3ecf37a7d0bc1eaa4efec885c2721b05f73d3d4f4d2cc52d25d46aedce41f3be3c919256793fa25c6795c26fcde5b5e778959969d9dddecc98fcdbb
 EBUILD gtkcdlabel-1.12.ebuild 863 SHA256 6b1f04a5dd45e395c9592afe1160a0dacd488188ebcb2c3454eb1e0c8a4652d3 SHA512 5c2d6512a23df5f511e02aa8657d7adf4fdff837cae5183b90a0916ad2689daf9f8f9a58d57b1b915dfdf442b5b06cb8311dbecf07a6599ec982cb62a10245a6 WHIRLPOOL 29ce05ece35dd342ccb35eaaf052bd1c7f86926750f6cfab70c5e3b04f0d7a709c17096ef154cd63a9077cb6dd338a8cf443347579a3e02e9a742c6f525384f8
+EBUILD gtkcdlabel-1.14-r1.ebuild 958 SHA256 a50c0af4642bbe2780a3f6fb5a30e549426a86bfa9447f1171f8d0330a45a6ed SHA512 09913d833fd31c8ef1797961051ce40e817c0d1289a9f427e0a89b5ec5bd885c3ec5f0ed578f8edfcbcf8754e7913945f22a08a3aefe5cf6031a521eef0b80c9 WHIRLPOOL 8802cdee35f4f5e3300edde201e49743f5408ff404c8b65c0aab9d616cd9fe624d2cbf9359be8a224d28cd69b56285f5671199f38bd2fdfc7a87c5ae3725340e
 EBUILD gtkcdlabel-1.14.ebuild 867 SHA256 d73468cf46965e9d82ad372568481cb5b5d36034afa92dbfeaa74e176d8d21da SHA512 a7265397607b28279191d4e5d8bc349a3d80caa9ab4af9d15d80ccffc904fe929e8bf20cf7f105dcbd25ec04c798d68d92cfe5abe49a681b1c2fc39047803d23 WHIRLPOOL a9e4fb154fe97b722a0efe27d8e28db84ff21ea74006e1c7a6d7963f3707c36372b571a6bf110cd6e4737a2c25964c88f562408fa82f396aa92f255d7a11cdb2
-MISC ChangeLog 5119 SHA256 f7cb8c8d5bfa8f742616b5b5b18a8d2f221996f385b80d4dcd711a0aabc50758 SHA512 61b69dc1024de30e8556c019efa6b00d6ee65a1b9ae512777574e7f25aad5f8a9fb91732b2540bc96b5f4e6dbaa6914662d2457ba14a178464d7c9e158f15f80 WHIRLPOOL d314b89bb4be02f8514e32060bc538c9f88061ae64cde56401ebae9d5f105e77611569503473033da34fdf0f418909e4cfde2507170551300bcadd82d32890bd
+MISC ChangeLog 5263 SHA256 efd110b9f0af4adb4750cd411d2cb50d1088bbcb2fba190a1dbba9d30b06dcc8 SHA512 8cb897c2e79243a6f6550ead9b98de0bcb4615a5b4173977b987a4216c27b703265f241184ab72dc150931c50c7c7fd98d8c409ea1a8e45b8e56ab234f91e038 WHIRLPOOL 2190fa936183f43ed427ecc57053d7bfd96aaa688ae3d09aa4d371fa29931292801335036418bf0eca145dd6151192bb56706d54f1c7808f7158997d8a6a7718
 MISC metadata.xml 167 SHA256 e63e128685e2c6da2eacfda6e91e700c1eb6f62cc2172ab64eada2ae71431ef2 SHA512 23b89532b34ac7118832402c25d8afc189132e0da2182fcc5ce5e69ba2f0c170226599ae981be2bbc3fd8474baf707af58f6292b89221339aa8b4a2265ade0cd WHIRLPOOL d8505f9121d7531f43f9730eff208d89eec443f6612cfa288f2f6137e75ac40faf0e11a0e89f23111e3f16dda6178c406025cce3edd399f03d9bfd5a46c76e3b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJUndi8XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOShEP/00YMwPSFm82vu5cL/8hO9T8
+IDJ98sTPTVvw3iMwajfPoLvyrRVJhKnRkzEyggjnC5bxBiWEYHjToLWwpxwzQIv8
+9bMzaNBuWQp9RF26cvo8VKWDB+sEcN58zQ22P52L/cx4pbpmtYSnH1qBZ36NKm6a
+owYpQWFmbtvP8MS7iE6/Uksgmc0nXV676PbQJtFi70ws3rlkydI31rLBhXa/QF3p
+qGZJ9ymbiQDvoIQZ8FJiR4nJCKYrstkmlMUeUxyblU5fCeQul0lqFc3vadyPAfMZ
+gnO+xg7FcSwqG45qiKCOfFQOPQFVLIASYuYAnSMxtwYCUUJZXzihCZ4mqH02Tm/R
+uarmUqc9M947vGd9lJhUhLQ8oRI/2txdAF/zrNT/panGZTldSczTq/7RYkCxnv30
+mpccZc1cJ37Fi6h6CQSJ/oZhGA2ojN8pFbr3AjUEMqxUMTLj1A2RRtb1/tRSt5dK
+Ki0hZuqMktVHbLmGObBFEQ09GrRPGJt+79M/sjEbFApABwb8o2iKRPUe3OkkafV3
+4/iP28iQuM3T8z9/TAMoydTy93oexSZFRD5FeFtKbN0FsogSSFZ/ocLt3xVW+5uc
+grenw215bEPNNufoX5pdrFctowA/i83UyyTnPPcTBXRzAFovHyEWFes7SUvwsYjK
+UNy9Z1AklR9DrRk75eie
+=PMs9
+-----END PGP SIGNATURE-----
