@@ -1,6 +1,11 @@
 # ChangeLog for app-cdr/cdcover
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdcover/ChangeLog,v 1.3 2011/02/11 19:58:58 ssuominen Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdcover/ChangeLog,v 1.4 2014/12/26 21:42:13 mgorny Exp $
+
+*cdcover-0.7.4-r1 (26 Dec 2014)
+
+  26 Dec 2014; Michał Górny <mgorny@gentoo.org> +cdcover-0.7.4-r1.ebuild:
+  Convert to python-single-r1.
 
 *cdcover-0.7.4 (11 Feb 2011)
 
@@ -18,4 +23,3 @@
   +files/cdcover-0.7.3-install_all_images.patch, +cdcover-0.7.3.ebuild:
   Initial commit for bug 81768, thanks to Roland Schäuble and BT <amak79 AT
   gmail DOT com>
-
